@@ -16,6 +16,9 @@
     </dependency>	
   </dependencies>
   <build>
+    <properties>
+      <argLine>-your -extra -arguments</argLine>
+    </properties>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -25,8 +28,7 @@
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.12.1</version>
-        <configuration>
-          <argLine>-server -ea -XX:MaxPermSize=256m -Xmx4g -XX:-UseSplitVerifier surefire.argLine</argLine>
+        <configuration>          
         </configuration>
       </plugin>		
       <plugin>
